Fix to heading spacing on mobile

--- a/src/styles/components/altRoomDisplays.less
+++ b/src/styles/components/altRoomDisplays.less
@@ -94,6 +94,9 @@
         }
         h5 {
           margin-bottom:20px !important;
+          .viewport-mobile & {
+            margin-bottom:10px !important;
+          }
         }
         pricing-info {
           button-submit {
